# torrent-worker-coordinator

./: .aiderignore  .gitignore  README.md  activate  clean  docker-compose.yml  entry_point.sh  install  lint  memory  prod  pyproject.toml  requirements.testing.txt  requirements.txt  run  run_dev.py  setup.py  test  torrents.db  upload_package.sh
src/torrent_worker_coordinator/: __init__.py  app.py  app_schemas.py  asyncwrap.py  client.py  db.py  info_hash.py  integration_test_env.py  integration_test_process.py  log.py  models.py  paths.py  settings.py  task_background.py  task_download_github.py  task_populate_torrents.py  torrent_manager.py  types.py  util.py  version.py
src/torrent_worker_coordinator/test/: app.py  run_server_in_thread.py  test_app.py
src/torrent_worker_coordinator/tests/: test_task_populate_torrents.py
tests/: test_app.py  test_app_complex.py  test_app_download.py  test_app_purge_unattended.py  test_db.py  test_download_github.py  test_example.py  test_info_hash.py  test_models.py  test_populate_torrents.py  test_version.py
