[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "torrent-worker-coordinator"
description = "Coordinates Torrents"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Zach Vorhies"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["dependencies", "version"]
# Change this with the version number bump.


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = { attr = "torrent_worker_coordinator.__version__" }

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.setuptools.packages.find]
where = ["src"]